Bug 96269 - [WK2][WTR] WebKitTestRunner needs testRunner.setSpatialNavigationEnabled
Summary: [WK2][WTR] WebKitTestRunner needs testRunner.setSpatialNavigationEnabled
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mikhail Pozdnyakov
URL:
Keywords:
Depends on: 96397
Blocks:
  Show dependency treegraph
 
Reported: 2012-09-10 06:41 PDT by Mikhail Pozdnyakov
Modified: 2012-09-11 09:01 PDT (History)
4 users (show)

See Also:


Attachments
patch (11.24 KB, patch)
2012-09-10 07:13 PDT, Mikhail Pozdnyakov
kenneth: review+
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff
to be landed (11.21 KB, patch)
2012-09-11 03:55 PDT, Mikhail Pozdnyakov
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff
rebased (11.24 KB, patch)
2012-09-11 05:15 PDT, Mikhail Pozdnyakov
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff
another attempt (11.12 KB, patch)
2012-09-11 06:41 PDT, Mikhail Pozdnyakov
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Pozdnyakov 2012-09-10 06:41:13 PDT
WebKitTestRunner needs testRunner.setSpatialNavigationEnabled in order to unskip
fast/spatial-navigation
Comment 1 Mikhail Pozdnyakov 2012-09-10 07:13:47 PDT
Created attachment 163122 [details]
patch
Comment 2 WebKit Review Bot 2012-09-10 08:16:07 PDT
Comment on attachment 163122 [details]
patch

Rejecting attachment 163122 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1

ERROR: /mnt/git/webkit-commit-queue/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).

Full output: http://queues.webkit.org/results/13798822
Comment 3 Mikhail Pozdnyakov 2012-09-11 03:09:10 PDT
(In reply to comment #2)
> (From update of attachment 163122 [details])
> Rejecting attachment 163122 [details] from commit-queue.
> 
> Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1
> 
> ERROR: /mnt/git/webkit-commit-queue/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
> 
> Full output: http://queues.webkit.org/results/13798822

Looks weird.
Comment 4 Chris Dumez 2012-09-11 03:12:18 PDT
Comment on attachment 163122 [details]
patch

View in context: https://bugs.webkit.org/attachment.cgi?id=163122&action=review

> Tools/ChangeLog:5
> +

Missing Reviewed by NOBODY line.
Comment 5 WebKit Review Bot 2012-09-11 03:13:12 PDT
Comment on attachment 163122 [details]
patch

Rejecting attachment 163122 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1

ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).

Full output: http://queues.webkit.org/results/13810584
Comment 6 Mikhail Pozdnyakov 2012-09-11 03:55:04 PDT
Created attachment 163326 [details]
to be landed
Comment 7 WebKit Review Bot 2012-09-11 05:01:52 PDT
Comment on attachment 163326 [details]
to be landed

Rejecting attachment 163326 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2

Last 500 characters of output:
KitTestRunner/InjectedBundle/InjectedBundle.cpp.rej
patching file Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp
Hunk #1 succeeded at 683 with fuzz 1 (offset 5 lines).
patching file Tools/WebKitTestRunner/InjectedBundle/TestRunner.h
Hunk #1 FAILED at 106.
1 out of 1 hunk FAILED -- saving rejects to file Tools/WebKitTestRunner/InjectedBundle/TestRunner.h.rej

Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue

Full output: http://queues.webkit.org/results/13819289
Comment 8 Mikhail Pozdnyakov 2012-09-11 05:15:02 PDT
Created attachment 163338 [details]
rebased
Comment 9 WebKit Review Bot 2012-09-11 05:50:42 PDT
Comment on attachment 163338 [details]
rebased

Rejecting attachment 163338 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2

Last 500 characters of output:
Kit/chromium/third_party/yasm/source/patched-yasm --revision 154697 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium'
50>At revision 154697.

________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium'

________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium'
Updating webkit projects from gyp files...

Full output: http://queues.webkit.org/results/13828076
Comment 10 Mikhail Pozdnyakov 2012-09-11 06:41:04 PDT
Created attachment 163350 [details]
another attempt

removed OOOPS from ChangeLog
Comment 11 WebKit Review Bot 2012-09-11 07:49:32 PDT
Comment on attachment 163350 [details]
another attempt

Clearing flags on attachment: 163350

Committed r128186: <http://trac.webkit.org/changeset/128186>
Comment 12 WebKit Review Bot 2012-09-11 07:49:36 PDT
All reviewed patches have been landed.  Closing bug.